feat: complete delete customer v3 experiment
